--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+:root {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+    font-weight: bolder;
+}
+
 body {
-    margin: 20px;
     background-color: grey;
 }
 
@@ -11,17 +16,20 @@ body {
     "display"
     "board"
     "options";
+    gap: 20px;
+    margin: 20px;
 }
 
 .display {
     grid-area: display;
+    display: flex;
     justify-content: center;
     align-content: center;
 }
 
+
 .board {
-    /* width: 100vw;
-    height: 100vh; */
+    grid-area: board;
     display: grid;
     justify-content: center;
     align-content: center;
@@ -36,8 +44,23 @@ body {
 }
 
 .options {
+    grid-area: options;
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;  
+}
+
+.btn {
+    /* margin-inline: 10px; */
+    /* border-radius: 5px; */
+    border-color: green;
+    height: 30px;
+    width: 100px;
+    background-color: black;
+    color: yellowgreen;
+    font-weight: bold;
+}
+
+#restart {
+    color: red;
 }
