--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
     background-color: grey;
+    width: 100vw;
+    height: 100vh;
 }
 
 .main {
@@ -63,4 +65,29 @@ body {
 
 #restart {
     color: red;
+}
+
+/*   */
+
+.user-choice div {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.user-choice input[type="radio"] {
+    display: none;
+}
+
+.user-choice label {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 1px solid green;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+.user-choice input[type="radio"]:checked + label {
+    background-color: green;
+    border: 1px solid black;
 }
