css and pg layout (user inputs) adjustments

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 .cell {
     width: 100px;
     height: 100px;
+    color: limegreen;
     background-color: black;
     border: 1px solid green;
 }
