--- a/style.css
+++ b/style.css
@@ -20,14 +20,17 @@ body {
     "options";
     gap: 20px;
     margin: 20px;
+    
 }
 
 .display {
     grid-area: display;
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 
@@ -45,6 +48,10 @@ body {
     color: limegreen;
     background-color: black;
     border: 1px solid green;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 5rem;
 }
 
 .options {
@@ -92,4 +99,23 @@ body {
 .user-choice input[type="radio"]:checked + label {
     background-color: green;
     border: 1px solid black;
+}
+
+#start-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 25%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.75);
+    color: white;
+    
+}
+
+#start-form > div {
+    padding: 20px;
 }
